# SparkPlug

./: .gitignore  CMakeLists.txt  Game.h  Main.cpp  README.md  main.cpp
Engine/: Engine.h
Engine/Renderer/: Renderer.cpp  Renderer.h
Engine/Renderer/Allocator/: Allocator.cpp  Allocator.h
Engine/Renderer/ComputePipeline/: ComputePipeline.cpp  ComputePipeline.h
Engine/Renderer/DescriptorSet/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h
Engine/Renderer/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h
Engine/Renderer/ImageView/: ImageView.cpp  ImageView.h
Engine/Renderer/Instance/: Instance.cpp  Instance.h
Engine/Renderer/LogicalDevice/: LogicalDevice.cpp  LogicalDevice.h
Engine/Renderer/PhysicalDevice/: PhysicalDevice.cpp  PhysicalDevice.h
Engine/Renderer/RenderPass/: RenderPass.cpp  RenderPass.h
Engine/Renderer/Renderpass/: Renderpass.cpp  Renderpass.h
Engine/Renderer/Shader/: Shader.cpp  (+1 more)
Engine/Utilities/: FileUtils.cpp  FileUtils.h
Game/: Game.h
OLD/Shaders/: base.vert  vert.spv
Shaders/: Makefile  base.vert  compileShaders.bat  vert.spv
SparkPlug/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.h  Engine.h  Fences.cpp  Fences.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  Main.cpp  Mesh.cpp  Mesh.h  PhysicalDevice.h  RenderPass.cpp  RenderPass.h  Renderer.h  SparkPlug.sln  SparkPlug.vcxproj  SparkPlug.vcxproj.filters  Swapchain.cpp  Swapchain.h  VkRender.h  Window.h
SparkPlug/Shaders/: base.vert  vert.spv
x64/Debug/: window.obj.enc
(+84 files in other folders)
